--- a/VK_lesson_2/Base.lproj/Main.storyboard
+++ b/VK_lesson_2/Base.lproj/Main.storyboard
@@ -202,7 +202,7 @@
         <scene sceneID="9up-eW-YRJ">
             <objects>
                 <tableViewController id="sHx-ji-JrL" customClass="FriendsTableViewController" customModule="VK_lesson_2" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="212-fS-MZS">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="-1" id="212-fS-MZS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -223,7 +223,7 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J4h-gi-cuu" userLabel="ShadowView" customClass="ShadowView" customModule="VK_lesson_2" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                             <subviews>
-                                                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XAf-1e-zaY" userLabel="Friend logo">
+                                                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XAf-1e-zaY" userLabel="Friend logo" customClass="CornerAvatar" customModule="VK_lesson_2" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
@@ -297,12 +297,21 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchDisplayController" destination="S2y-Pe-agj" id="YRv-Og-LEx"/>
                         <outlet property="view" destination="212-fS-MZS" id="am0-AI-IK2"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="try-aM-hWJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="S2y-Pe-agj">
+                    <connections>
+                        <outlet property="delegate" destination="sHx-ji-JrL" id="ANB-R6-A3i"/>
+                        <outlet property="searchContentsController" destination="sHx-ji-JrL" id="3Mk-CB-BWH"/>
+                        <outlet property="searchResultsDataSource" destination="sHx-ji-JrL" id="rbG-Dj-g7b"/>
+                        <outlet property="searchResultsDelegate" destination="sHx-ji-JrL" id="L1R-pn-Vxy"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="3365.5999999999999" y="831.63418290854577"/>
+            <point key="canvasLocation" x="3506" y="795"/>
         </scene>
         <!--Фотографии-->
         <scene sceneID="mr4-gj-qUx">
@@ -316,23 +325,28 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Pzo-jO-YJ1">
-                                    <size key="itemSize" width="172" height="110"/>
+                                    <size key="itemSize" width="172" height="170"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="friendFotos" id="Fqe-65-ftB" customClass="FriendFotoCell" customModule="VK_lesson_2" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="172" height="110"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="172" height="170"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="172" height="110"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="172" height="170"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kfX-J8-iTb">
                                                     <rect key="frame" x="7" y="0.0" width="165" height="110"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5c7-n1-fQB" customClass="LikeControl" customModule="VK_lesson_2" customModuleProvider="target">
+                                                    <rect key="frame" x="7" y="118" width="165" height="37"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
                                             </subviews>
                                         </view>
                                         <connections>
@@ -359,6 +373,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXt-Kr-tI6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4205.6000000000004" y="829.83508245877067"/>
+        </scene>
+        <!--Новости-->
+        <scene sceneID="bi6-ah-Lb7">
+            <objects>
+                <tableViewController id="TnO-O2-Fys" customClass="NewsTableViewController" customModule="VK_lesson_2" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="eC5-rm-6Fj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="newsCell" id="OOW-Tm-dJb" customClass="NewsTableViewCell" customModule="VK_lesson_2" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OOW-Tm-dJb" id="bau-Si-7Cs">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="TnO-O2-Fys" id="Qol-zH-3ez"/>
+                            <outlet property="delegate" destination="TnO-O2-Fys" id="xBT-9O-vTZ"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Новости" id="DrD-pQ-rg0">
+                        <barButtonItem key="leftBarButtonItem" title="Назад" id="tP0-8b-RJY">
+                            <connections>
+                                <action selector="backAction:" destination="TnO-O2-Fys" id="A0b-GY-YZv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n3d-3o-d81" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1534" y="1541"/>
+        </scene>
+        <!--Новости-->
+        <scene sceneID="bnx-g6-0oj">
+            <objects>
+                <navigationController id="0HD-yy-t59" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Новости" id="Qil-yH-ww3"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aN0-GO-PPw">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="TnO-O2-Fys" kind="relationship" relationship="rootViewController" id="hVh-Gy-LSn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LHM-KH-qgO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1534" y="795"/>
         </scene>
         <!--Все группы-->
         <scene sceneID="6P0-Ul-db4">
@@ -454,6 +522,7 @@
                     <connections>
                         <segue destination="Zlm-ke-A4w" kind="relationship" relationship="viewControllers" id="RKt-Oz-FkE"/>
                         <segue destination="Wh8-cP-6tf" kind="relationship" relationship="viewControllers" id="g70-wL-5nj"/>
+                        <segue destination="0HD-yy-t59" kind="relationship" relationship="viewControllers" id="KnF-bT-d3p"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y5g-3Q-oCS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -478,7 +547,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="636-8v-6ae" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3367.1999999999998" y="26.53673163418291"/>
+            <point key="canvasLocation" x="3287" y="27"/>
         </scene>
         <!--Группы-->
         <scene sceneID="TKm-EX-M9k">
@@ -497,7 +566,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IzE-fx-cLj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2390" y="832"/>
+            <point key="canvasLocation" x="2793" y="795"/>
         </scene>
     </scenes>
 </document>
